# mc-asm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.txt  CMakeLists.txt  Dockerfile  Dockerfile.llvm  README.md  Vagrantfile  Vagrantfile.windows  conanfile.py  cpack-config.cmake  mcasmConfig.cmake.in  pyproject.toml  requirements-dev.txt  setup.py  version.txt
include/mcasm/: mcasm.h  version.h.in
python/: CMakeLists.txt  install.cmake.in  mypy.ini  setup.py.in  version.py.in
python/mcasm/: __init__.py  __main__.py  assembler.py
python/tests/: test_assembler.py
src/: CMakeLists.txt  JSONStreamer.cpp  JSONStreamer.h  MCASM.cpp  bind.cpp  casters.h  driver.cpp  mc.cpp  mc.h  state.h
src/mcasm/: __init__.py  __main__.py  streamer.py  version.py
src/mcasm/_core/: __init__.pyi
src/mcasm/_core/mc/: __init__.pyi
src/test/: CMakeLists.txt  hello.test.cpp
test/: test_lib.c
tests/: test_assembler.py
